tests/error/btreemap_key_not_i64.vow
// TEST: error-code BTreeMapKeyTypeMustBeI64
// TEST: stderr "BTreeMap key type must be i64"
module BTreeMapKeyNotI64

fn main() -> i32 {
    let m: BTreeMap<bool, i64> = BTreeMap::new();
    m.insert(true, 1);
    0
}
